# cantor

./: .gitignore  README.md  state-cantor-development.md
.github/workflows/: ci.yml  retrain.yml
python/: pyproject.toml
python/cantor/: __init__.py
python/cantor/cli/: __init__.py  main.py
python/cantor/client/: __init__.py  compressor.py  storage.py
python/cantor/compression/: __init__.py  delta.py  encoder.py  merkle.py
python/cantor/core/: __init__.py  config.py  types.py
python/cantor/data/: __init__.py  dataset.py  extractor.py  features.py
python/cantor/deployment/: __init__.py
python/cantor/models/: __init__.py  encoder.py  transformer.py
python/cantor/patterns/: __init__.py  clustering.py  sequential.py  temporal.py
python/cantor/training/: __init__.py  loss.py  trainer.py
python/cantor/verification/: __init__.py  fraud.py  verifier.py
rust/: Cargo.toml
rust/cantor-compress/: Cargo.toml
rust/cantor-compress/benches/: compress_bench.rs
rust/cantor-compress/src/: lib.rs
rust/cantor-core/: Cargo.toml
rust/cantor-core/src/: error.rs  lib.rs  types.rs
rust/cantor-merkle/: Cargo.toml
rust/cantor-merkle/benches/: merkle_bench.rs
rust/cantor-merkle/src/: lib.rs
rust/cantor-verify/: Cargo.toml
rust/cantor-verify/benches/: verify_bench.rs
rust/cantor-verify/src/: lib.rs
