[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cantor"
version = "0.1.0"
description = "ML-driven blockchain state compression through transaction pattern recognition"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Wiener Labs" }]
keywords = ["blockchain", "compression", "machine-learning", "ethereum", "state"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "web3>=6.0.0",
    "pymerkle>=6.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "prefixspan>=0.5.2",
    "tqdm>=4.66.0",
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "orjson>=3.9.0",
    "xxhash>=3.4.0",
    "lz4>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.5.0",
    "hypothesis>=6.90.0",
]
training = [
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "pytorch-lightning>=2.1.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
]

[project.scripts]
cantor = "cantor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cantor"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=cantor --cov-report=term-missing"

