[workspace]
resolver = "2"
members = [
    "cantor-core",
    "cantor-merkle",
    "cantor-verify",
    "cantor-compress",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Wiener Labs"]
repository = "https://github.com/wienerlabs/cantor"

[workspace.dependencies]
# Core
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
hex = "0.4"

# Crypto
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1.4"
criterion = "0.5"

