[package]
name = "cantor-compress"
description = "Delta compression algorithms for CANTOR"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cantor-core = { path = "../cantor-core" }
thiserror.workspace = true
bytes.workspace = true
lz4 = "1.24"

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "compress_bench"
harness = false

