[package]
name = "cantor-core"
description = "Core types and traits for CANTOR state compression"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
bytes.workspace = true
hex.workspace = true
sha2.workspace = true

[dev-dependencies]
proptest.workspace = true

